--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "Trabalho de FrameWorks 1 ",
   "devDependencies": {
+    "tsx": "^4.19.4",
     "typescript": "^5.8.3"
   },
   "dependencies": {
@@ -19,6 +20,6 @@
     "@types/node": "^22.15.3",
     "fastify": "^5.3.2",
     "mysql2": "^3.14.1",
-    "tsx": "^4.19.4"
+    "node-modules": "^1.0.1"
   }
 }
